--- a/app.json
+++ b/app.json
@@ -9,6 +9,9 @@
       "android",
       "web"
     ],
+    "android": {
+      "package": "com.yourcompany.yourappname"
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -23,8 +26,8 @@
     "assetBundlePatterns": [
       "**/*"
     ],
-    "ios": {
-      "supportsTablet": true
+    "ios": {      
+      "bundleIdentifier": "com.yourcompany.yourappname"
     }
   }
 }
